# Indoor-Plants

./: .gitignore  .gitinit  DESIGN_DOCUMENT.md  README.md  SECURITY_SETUP.md  build.sh  fix_migrations.py  llm.txt  manage.py  package-lock.json  procfile  products.json  pyproject.toml  railway.json  render.yaml  requirements.txt  text.py
.ebextensions/: django.config  environment.config
accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_shippingaddress.py  0003_delete_shippingaddress.py  0004_customuser_is_verified.py  0005_customuser_address_customuser_business_name_and_more.py  0006_customuser_store_banner.py  0007_customuser_slug.py  0008_alter_customuser_managers.py
admin_dashboard/: models.py  urls.py  views.py
admin_dashboard/migrations/: 0001_initial.py
ai/: bot.py  models.py  urls.py  views.py
ai/migrations/: 0001_initial.py
ai/prompts/: plant_qa.txt
analytics/: middleware.py  models.py
analytics/migrations/: 0001_initial.py  0002_pageview.py
cart/: admin.py  models.py  urls.py  views.py
indoor_plant/: asgi.py  settings.py  urls.py  views.py  wsgi.py
inventory/: admin.py  models.py  signals.py
orders/: admin.py  forms.py  models.py  services.py  urls.py  views.py
payments/: urls.py  views.py
products/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
static/: custom.css
templates/: admin_dashboard.html  base.html  buyer_dashboard.html  cart.html  home.html  order_confirmation.html  seller_dashboard.html
utils/: posthog_client.py
(+84 files in other folders)
