[tool.poetry]
name = "indoor-plant"
version = "0.1.0"
description = "This is a marketplace for vendor and buyers"
authors = ["Nebullii <nebullii@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
